// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton renders correctly with type="block" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.css-1cu1y7v-StyledContainer {
  position: relative;
  width: 100%;
  overflow: hidden;
  cursor: progress;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: column;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  height: 100%;
}

.css-efvoe1-StyledList {
  min-height: 200px;
  width: 100%;
  height: 100%;
  padding: 16px;
  border: 1px solid #e9eaeb;
  border-radius: 4px;
  margin: 0;
}

.css-efvoe1-StyledList>.ez87ex11:not(:last-child) {
  border-bottom: 1px solid #d9dadd;
}

.css-1udri31-StyledLine {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 24px 16px;
}

.css-h21geo-IconSkeleton {
  margin-right: 8px;
  width: 32px;
  height: 32px;
  min-width: 32px;
  border-radius: 8px;
  background-color: #e9eaeb;
}

.css-mhtdbo-Line {
  height: 12px;
  width: 120px;
  max-width: 100%;
  border-radius: 8px;
  background-color: #e9eaeb;
}

.css-a7k45f-StyledDiv {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #f9f9fa00,
      #f9f9fa4D,
      #f9f9fa66,
      #f9f9fa4D,
      #f9f9fa00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .css-a7k45f-StyledDiv {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    aria-busy="true"
    aria-live="polite"
    class="css-1cu1y7v-StyledContainer e183x2r81"
  >
    <ul
      class="css-efvoe1-StyledList ez87ex10"
    >
      <li
        class="css-1udri31-StyledLine ez87ex11"
      >
        <div
          class="css-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="css-mhtdbo-Line e1denkbe0"
        />
      </li>
      <li
        class="css-1udri31-StyledLine ez87ex11"
      >
        <div
          class="css-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="css-mhtdbo-Line e1denkbe0"
        />
      </li>
      <li
        class="css-1udri31-StyledLine ez87ex11"
      >
        <div
          class="css-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="css-mhtdbo-Line e1denkbe0"
        />
      </li>
    </ul>
    <div
      class="css-a7k45f-StyledDiv e183x2r80"
    />
  </div>
</DocumentFragment>
`;

exports[`Skeleton renders correctly with type="blocks" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.css-1cu1y7v-StyledContainer {
  position: relative;
  width: 100%;
  overflow: hidden;
  cursor: progress;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: column;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  height: 100%;
}

.css-sprtbs-StyledContainer {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 16px;
}

.css-ay7hiz-Block {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  border: 1px solid #e9eaeb;
  border-radius: 4px;
  overflow: hidden;
}

.css-h21geo-IconSkeleton {
  margin-right: 8px;
  width: 32px;
  height: 32px;
  min-width: 32px;
  border-radius: 8px;
  background-color: #e9eaeb;
}

.css-mhtdbo-Line {
  height: 12px;
  width: 120px;
  max-width: 100%;
  border-radius: 8px;
  background-color: #e9eaeb;
}

.css-a7k45f-StyledDiv {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #f9f9fa00,
      #f9f9fa4D,
      #f9f9fa66,
      #f9f9fa4D,
      #f9f9fa00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .css-a7k45f-StyledDiv {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    aria-busy="true"
    aria-live="polite"
    class="css-1cu1y7v-StyledContainer e183x2r81"
  >
    <div
      class="css-sprtbs-StyledContainer esrnljb1"
    >
      <div
        class="css-ay7hiz-Block esrnljb0"
      >
        <div
          class="css-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="css-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="css-ay7hiz-Block esrnljb0"
      >
        <div
          class="css-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="css-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="css-ay7hiz-Block esrnljb0"
      >
        <div
          class="css-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="css-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="css-ay7hiz-Block esrnljb0"
      >
        <div
          class="css-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="css-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="css-ay7hiz-Block esrnljb0"
      >
        <div
          class="css-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="css-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="css-ay7hiz-Block esrnljb0"
      >
        <div
          class="css-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="css-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="css-ay7hiz-Block esrnljb0"
      >
        <div
          class="css-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="css-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="css-ay7hiz-Block esrnljb0"
      >
        <div
          class="css-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="css-mhtdbo-Line e1denkbe0"
        />
      </div>
    </div>
    <div
      class="css-a7k45f-StyledDiv e183x2r80"
    />
  </div>
</DocumentFragment>
`;

exports[`Skeleton renders correctly with type="box" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.css-1cu1y7v-StyledContainer {
  position: relative;
  width: 100%;
  overflow: hidden;
  cursor: progress;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: column;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  height: 100%;
}

.css-sprtbs-StyledContainer {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 16px;
}

.css-1m8d80p-Block {
  height: 130px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: space-evenly;
  -ms-flex-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  justify-content: space-evenly;
  border: 1px solid #e9eaeb;
  border-radius: 4px;
  overflow: hidden;
}

.css-h21geo-IconSkeleton {
  margin-right: 8px;
  width: 32px;
  height: 32px;
  min-width: 32px;
  border-radius: 8px;
  background-color: #e9eaeb;
}

.css-mhtdbo-Line {
  height: 12px;
  width: 120px;
  max-width: 100%;
  border-radius: 8px;
  background-color: #e9eaeb;
}

.css-a7k45f-StyledDiv {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #f9f9fa00,
      #f9f9fa4D,
      #f9f9fa66,
      #f9f9fa4D,
      #f9f9fa00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .css-a7k45f-StyledDiv {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    aria-busy="true"
    aria-live="polite"
    class="css-1cu1y7v-StyledContainer e183x2r81"
  >
    <div
      class="css-sprtbs-StyledContainer e18cng8b1"
    >
      <div
        class="css-1m8d80p-Block e18cng8b0"
      >
        <div
          class="css-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="css-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="css-1m8d80p-Block e18cng8b0"
      >
        <div
          class="css-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="css-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="css-1m8d80p-Block e18cng8b0"
      >
        <div
          class="css-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="css-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="css-1m8d80p-Block e18cng8b0"
      >
        <div
          class="css-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="css-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="css-1m8d80p-Block e18cng8b0"
      >
        <div
          class="css-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="css-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="css-1m8d80p-Block e18cng8b0"
      >
        <div
          class="css-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="css-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="css-1m8d80p-Block e18cng8b0"
      >
        <div
          class="css-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="css-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="css-1m8d80p-Block e18cng8b0"
      >
        <div
          class="css-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="css-mhtdbo-Line e1denkbe0"
        />
      </div>
    </div>
    <div
      class="css-a7k45f-StyledDiv e183x2r80"
    />
  </div>
</DocumentFragment>
`;

exports[`Skeleton renders correctly with type="donut" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.css-1cu1y7v-StyledContainer {
  position: relative;
  width: 100%;
  overflow: hidden;
  cursor: progress;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: column;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  height: 100%;
}

.css-a1981g-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.css-1mvslid-StyledSVG {
  height: 206px;
  width: 206px;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

.css-g1cws9-StyledCircle {
  transform-origin: 50% 50%;
  stroke: #e9eaeb;
  stroke-width: 18;
  stroke-linecap: butt;
  fill: none;
}

.css-1a6m9ou-LineList {
  display: grid;
  list-style: none;
  gap: 16px;
}

.css-mhtdbo-Line {
  height: 12px;
  width: 120px;
  max-width: 100%;
  border-radius: 8px;
  background-color: #e9eaeb;
}

.css-a7k45f-StyledDiv {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #f9f9fa00,
      #f9f9fa4D,
      #f9f9fa66,
      #f9f9fa4D,
      #f9f9fa00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .css-a7k45f-StyledDiv {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    aria-busy="true"
    aria-live="polite"
    class="css-1cu1y7v-StyledContainer e183x2r81"
  >
    <div
      class="css-a1981g-StyledContainer e1bu753f3"
    >
      <svg
        class="css-1mvslid-StyledSVG e1bu753f2"
      >
        <circle
          class="css-g1cws9-StyledCircle e1bu753f1"
          cx="103"
          cy="103"
          r="90"
        />
      </svg>
      <ul
        class="css-1a6m9ou-LineList e1bu753f0"
      >
        <li>
          <div
            class="css-mhtdbo-Line e1denkbe0"
          />
        </li>
        <li>
          <div
            class="css-mhtdbo-Line e1denkbe0"
          />
        </li>
        <li>
          <div
            class="css-mhtdbo-Line e1denkbe0"
          />
        </li>
        <li>
          <div
            class="css-mhtdbo-Line e1denkbe0"
          />
        </li>
      </ul>
    </div>
    <div
      class="css-a7k45f-StyledDiv e183x2r80"
    />
  </div>
</DocumentFragment>
`;

exports[`Skeleton renders correctly with type="line" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.css-1cu1y7v-StyledContainer {
  position: relative;
  width: 100%;
  overflow: hidden;
  cursor: progress;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: column;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  height: 100%;
}

.css-mhtdbo-Line {
  height: 12px;
  width: 120px;
  max-width: 100%;
  border-radius: 8px;
  background-color: #e9eaeb;
}

.css-a7k45f-StyledDiv {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #f9f9fa00,
      #f9f9fa4D,
      #f9f9fa66,
      #f9f9fa4D,
      #f9f9fa00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .css-a7k45f-StyledDiv {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    aria-busy="true"
    aria-live="polite"
    class="css-1cu1y7v-StyledContainer e183x2r81"
  >
    <div
      class="css-mhtdbo-Line e1denkbe0"
    />
    <div
      class="css-a7k45f-StyledDiv e183x2r80"
    />
  </div>
</DocumentFragment>
`;

exports[`Skeleton renders correctly with type="list" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.css-1cu1y7v-StyledContainer {
  position: relative;
  width: 100%;
  overflow: hidden;
  cursor: progress;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: column;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  height: 100%;
}

.css-1m2hi1y-StyledList {
  list-style: none;
  padding: 0;
  margin: 0;
}

.css-1m2hi1y-StyledList>.e639qnr2:nth-of-type(even) {
  background-color: #f3f3f4;
}

.css-1ldrf1m-StyledItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 48px;
  padding: 4px 8px;
}

.css-vmfh4y-StyledLine {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.css-mhtdbo-Line {
  height: 12px;
  width: 120px;
  max-width: 100%;
  border-radius: 8px;
  background-color: #e9eaeb;
}

.css-a7k45f-StyledDiv {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #f9f9fa00,
      #f9f9fa4D,
      #f9f9fa66,
      #f9f9fa4D,
      #f9f9fa00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .css-a7k45f-StyledDiv {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    aria-busy="true"
    aria-live="polite"
    class="css-1cu1y7v-StyledContainer e183x2r81"
  >
    <ul
      class="css-1m2hi1y-StyledList e639qnr0"
    >
      <li
        class="css-1ldrf1m-StyledItem e639qnr2"
      >
        <div
          class="css-vmfh4y-StyledLine e639qnr1"
        >
          <div
            class="css-mhtdbo-Line e1denkbe0"
          />
        </div>
        <div
          class="css-vmfh4y-StyledLine e639qnr1"
        >
          <div
            class="css-mhtdbo-Line e1denkbe0"
          />
        </div>
        <div
          class="css-vmfh4y-StyledLine e639qnr1"
        >
          <div
            class="css-mhtdbo-Line e1denkbe0"
          />
        </div>
      </li>
      <li
        class="css-1ldrf1m-StyledItem e639qnr2"
      >
        <div
          class="css-vmfh4y-StyledLine e639qnr1"
        >
          <div
            class="css-mhtdbo-Line e1denkbe0"
          />
        </div>
        <div
          class="css-vmfh4y-StyledLine e639qnr1"
        >
          <div
            class="css-mhtdbo-Line e1denkbe0"
          />
        </div>
        <div
          class="css-vmfh4y-StyledLine e639qnr1"
        >
          <div
            class="css-mhtdbo-Line e1denkbe0"
          />
        </div>
      </li>
      <li
        class="css-1ldrf1m-StyledItem e639qnr2"
      >
        <div
          class="css-vmfh4y-StyledLine e639qnr1"
        >
          <div
            class="css-mhtdbo-Line e1denkbe0"
          />
        </div>
        <div
          class="css-vmfh4y-StyledLine e639qnr1"
        >
          <div
            class="css-mhtdbo-Line e1denkbe0"
          />
        </div>
        <div
          class="css-vmfh4y-StyledLine e639qnr1"
        >
          <div
            class="css-mhtdbo-Line e1denkbe0"
          />
        </div>
      </li>
    </ul>
    <div
      class="css-a7k45f-StyledDiv e183x2r80"
    />
  </div>
</DocumentFragment>
`;

exports[`Skeleton renders correctly with type="slider" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.css-1cu1y7v-StyledContainer {
  position: relative;
  width: 100%;
  overflow: hidden;
  cursor: progress;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: column;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  height: 100%;
}

.css-1ibkrfq-StyledContainer {
  height: 277px;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 16px;
  overflow: auto;
}

.css-yskav4-StyledCard {
  border: 1px solid #e9eaeb;
  border-radius: 4px;
  width: 239px;
  height: 261px;
  overflow: hidden;
}

.css-hgkn6i-StyledBanner {
  border: 1px solid #e9eaeb;
  background-color: #e9eaeb;
  width: 100%;
  height: 33%;
}

.css-a7k45f-StyledDiv {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #f9f9fa00,
      #f9f9fa4D,
      #f9f9fa66,
      #f9f9fa4D,
      #f9f9fa00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .css-a7k45f-StyledDiv {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    aria-busy="true"
    aria-live="polite"
    class="css-1cu1y7v-StyledContainer e183x2r81"
  >
    <div
      class="css-1ibkrfq-StyledContainer e1yrvvrg2"
    >
      <div
        class="css-yskav4-StyledCard e1yrvvrg1"
      >
        <div
          class="css-hgkn6i-StyledBanner e1yrvvrg0"
        />
      </div>
      <div
        class="css-yskav4-StyledCard e1yrvvrg1"
      >
        <div
          class="css-hgkn6i-StyledBanner e1yrvvrg0"
        />
      </div>
      <div
        class="css-yskav4-StyledCard e1yrvvrg1"
      >
        <div
          class="css-hgkn6i-StyledBanner e1yrvvrg0"
        />
      </div>
      <div
        class="css-yskav4-StyledCard e1yrvvrg1"
      >
        <div
          class="css-hgkn6i-StyledBanner e1yrvvrg0"
        />
      </div>
    </div>
    <div
      class="css-a7k45f-StyledDiv e183x2r80"
    />
  </div>
</DocumentFragment>
`;

exports[`Skeleton renders correctly with type="square" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.css-1cu1y7v-StyledContainer {
  position: relative;
  width: 100%;
  overflow: hidden;
  cursor: progress;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: column;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  height: 100%;
}

.css-1526wye-Square {
  height: 100%;
  width: 100%;
  max-width: 100%;
  background-color: #e9eaeb;
}

.css-a7k45f-StyledDiv {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #f9f9fa00,
      #f9f9fa4D,
      #f9f9fa66,
      #f9f9fa4D,
      #f9f9fa00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .css-a7k45f-StyledDiv {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    aria-busy="true"
    aria-live="polite"
    class="css-1cu1y7v-StyledContainer e183x2r81"
  >
    <div
      class="css-1526wye-Square e1uz28830"
    />
    <div
      class="css-a7k45f-StyledDiv e183x2r80"
    />
  </div>
</DocumentFragment>
`;

exports[`Skeleton renders default variant 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.css-1cu1y7v-StyledContainer {
  position: relative;
  width: 100%;
  overflow: hidden;
  cursor: progress;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: column;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  height: 100%;
}

.css-sprtbs-StyledContainer {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 16px;
}

.css-ay7hiz-Block {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  border: 1px solid #e9eaeb;
  border-radius: 4px;
  overflow: hidden;
}

.css-h21geo-IconSkeleton {
  margin-right: 8px;
  width: 32px;
  height: 32px;
  min-width: 32px;
  border-radius: 8px;
  background-color: #e9eaeb;
}

.css-mhtdbo-Line {
  height: 12px;
  width: 120px;
  max-width: 100%;
  border-radius: 8px;
  background-color: #e9eaeb;
}

.css-a7k45f-StyledDiv {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #f9f9fa00,
      #f9f9fa4D,
      #f9f9fa66,
      #f9f9fa4D,
      #f9f9fa00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .css-a7k45f-StyledDiv {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    aria-busy="true"
    aria-live="polite"
    class="css-1cu1y7v-StyledContainer e183x2r81"
  >
    <div
      class="css-sprtbs-StyledContainer esrnljb1"
    >
      <div
        class="css-ay7hiz-Block esrnljb0"
      >
        <div
          class="css-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="css-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="css-ay7hiz-Block esrnljb0"
      >
        <div
          class="css-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="css-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="css-ay7hiz-Block esrnljb0"
      >
        <div
          class="css-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="css-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="css-ay7hiz-Block esrnljb0"
      >
        <div
          class="css-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="css-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="css-ay7hiz-Block esrnljb0"
      >
        <div
          class="css-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="css-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="css-ay7hiz-Block esrnljb0"
      >
        <div
          class="css-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="css-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="css-ay7hiz-Block esrnljb0"
      >
        <div
          class="css-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="css-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="css-ay7hiz-Block esrnljb0"
      >
        <div
          class="css-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="css-mhtdbo-Line e1denkbe0"
        />
      </div>
    </div>
    <div
      class="css-a7k45f-StyledDiv e183x2r80"
    />
  </div>
</DocumentFragment>
`;
